// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow FlexRow component should render 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ jnIjoz"
    display="flex"
  >
    Flex Row
  </div>
</DocumentFragment>
`;

exports[`FlexRow FlexRow component should render row-reverse 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ bumAni"
    display="flex"
  >
    Flex Row Reverse
  </div>
</DocumentFragment>
`;
